--- a/AppHotelTerceiro/AppHotelTerceiro/View/HospedagemCalculada.xaml
+++ b/AppHotelTerceiro/AppHotelTerceiro/View/HospedagemCalculada.xaml
@@ -2,24 +2,64 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppHotelTerceiro.View.HospedagemCalculada"
-             Title="{Binding Path=Quarto.Descricao}">
+             Title="{Binding Path=Quarto.Descricao}"
+             BackgroundColor="DarkOliveGreen">
     <ContentPage.Content>
         <StackLayout>
+
             <Label Text="{Binding Path=Quarto.Descricao}"
-                VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
             
-            <Label Text="{Binding DataCheckIn}"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Frame Margin="10">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Adultos: " />
+                        <Label Text="{Binding QntAdultos}" Style="{StaticResource Valores}" />
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Crianças: " />
+                        <Label Text="{Binding QntCriancas}" Style="{StaticResource Valores}" />
+                    </StackLayout>
+                </StackLayout>
+            </Frame>
+            
+            <Frame Margin="10">
+                <Grid RowDefinitions="Auto, Auto"
+                      ColumnDefinitions="*, *, *">
+                    <Label Grid.Row="0" Grid.Column="0" Text="Check-In:" />
+                    <Label Grid.Row="0" Grid.Column="1" Text="Check-Out:" />
+                    <Label Grid.Row="0" Grid.Column="2" Text="Estadia:" />
 
-            <Label Text="{Binding DataCheckOut}"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                    <Label Grid.Row="1" Grid.Column="0" 
+                           Text="{Binding DataCheckIn, StringFormat='{}{0:dd/MM/yyyy}'}"
+                           Style="{StaticResource Valores}" />                    
+                    
+                    <Label Grid.Row="1" Grid.Column="1" 
+                           Text="{Binding DataCheckOut, StringFormat='{}{0:dd/MM/yyyy}'}"
+                           Style="{StaticResource Valores}" />                    
+                    
+                    <Label Grid.Row="1" Grid.Column="2" 
+                           Text="{Binding Estadia}" 
+                           Style="{StaticResource Valores}" />
+                </Grid>
+            </Frame>
 
-            <Label Text="{Binding Estadia}"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Frame Margin="10">
+                <Label HorizontalOptions="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Valor da Hospedagem: " />
+                            <Span Text="{Binding ValorTotal, StringFormat='{}{0:c}'}" 
+                                 
+                                  FontSize="Large"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+            </Frame>
+
+            <Button Text="Voltar" Clicked="Button_Clicked" />           
+            
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
