--- a/AppHotelTerceiro/AppHotelTerceiro/App.xaml
+++ b/AppHotelTerceiro/AppHotelTerceiro/App.xaml
@@ -5,6 +5,20 @@
     
     <Application.Resources>
 
+        <Style TargetType="Label" x:Key="fontePersonalizada">
+            <Setter Property="FontFamily">
+                <Setter.Value>
+                    <OnPlatform x:TypeArguments="x:String"
+                                Android="PlayfairDisplay-VariableFont_wght.ttf#PlayfairDisplay-VariableFont_wght" />
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="Label" x:Key="Titulo" BaseResourceKey="fontePersonalizada">
+            <Setter Property="FontSize" Value="54" />
+            <Setter Property="TextColor" Value="White" />
+        </Style>
+
         <Style TargetType="Label">
             <Setter Property="FontSize" Value="Medium" />
             <Setter Property="HorizontalTextAlignment" Value="Center" />
